--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,15 +129,15 @@
     <ul class='item-lists'>
       <% @items.each do |item| %>
         <li class='list'>
-          <%= link_to item_path(item) do %>
+          <%= link_to "#" do %>
             <div class='item-img-content'>
               <%= image_tag item.image, class: "item-img" if item.image.attached? %>
 
-              <% if item.sold_out? %>
+              <%# 商品が売れていればsold outを表示しましょう %>
                 <div class='sold-out'>
                   <span>Sold Out!!</span>
                 </div>
-              <% end %>
+              <%# //商品が売れていればsold outを表示しましょう %>
 
             </div>
             <div class='item-info'>
