--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -31,7 +31,9 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+    <%= form_with id: 'charge-form', class: 'transaction-form-wrap',local: true, scope: @order_form do |f| %>
+    <%= render 'shared/error_messages', model: @order_form %>
+
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
