--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,5 @@
 <%= render "shared/second-header"%>
+<%= include_gon %> 
 
 <div class='transaction-contents'>
   <div class='transaction-main'>
@@ -31,7 +32,7 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with id: 'charge-form', class: 'transaction-form-wrap',local: true, scope: @order_form do |f| %>
+    <%= form_with scope: @order_form, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
     <%= render 'shared/error_messages', model: @order_form %>
 
     <%# カード情報の入力 %>
